--- a/css/main.css
+++ b/css/main.css
@@ -58,19 +58,49 @@ li a{
 
 .one {
   text-align: center;
+  padding-top: 1em;
+  margin-bottom: 3.7em;
 }
 
 h2 {
   font-size: 2rem;
   padding: 0 .5em;
   font-weight: normal;
+  margin-bottom: 0;
+  border-top: 2px solid #e2e2e2;
 }
 
 .p-one {
-  padding: 0 .7em;
+  padding: .7em .7em;
+  margin: 0;
 }
 
-section {
+.two {
   display: grid;
   grid-template-columns: 1fr;
+  grid-gap: 1.5rem;
+  margin-bottom: 1.5em;
+}
+
+div a {
+  border: .2rem solid #3783a3;
+  padding: .5em 1em .6em;
+  text-decoration: none;
+  color: #3783a3;
+  border-radius: .3rem;
+  display: flex;
+}
+
+h3 {
+  margin-top: 1em;
+}
+
+footer {
+  text-align: center;
+  margin-top: 4em;
+}
+
+footer p {
+  margin-bottom: 1.5em;
+  font-size: .8232rem;
 }
