--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ li a{
 .one {
   text-align: center;
   padding-top: 1em;
-  margin-bottom: 3.7em;
+  margin-bottom: 3.5em;
 }
 
 h2 {
@@ -67,7 +67,6 @@ h2 {
   padding: 0 .5em;
   font-weight: normal;
   margin-bottom: 0;
-  border-top: 2px solid #e2e2e2;
 }
 
 .p-one {
@@ -79,7 +78,7 @@ h2 {
   display: grid;
   grid-template-columns: 1fr;
   grid-gap: 1.5rem;
-  margin-bottom: 1.5em;
+  margin-bottom: 1em;
 }
 
 div a {
@@ -89,18 +88,32 @@ div a {
   color: #3783a3;
   border-radius: .3rem;
   display: flex;
+  margin-top: 1.3em;
 }
 
 h3 {
   margin-top: 1em;
+  font-size: 1.4757rem;
+}
+
+.spanh3 {
+  font-size: 1rem;
 }
 
 footer {
   text-align: center;
-  margin-top: 4em;
+  margin-top: 1.5em;
 }
 
 footer p {
-  margin-bottom: 1.5em;
+  margin-top: 0;
   font-size: .8232rem;
+  padding: 1.5em;
+}
+
+hr {
+  margin-top: -2em;
+  margin-bottom: 2em;
+  border-width: 3px;
+  border-top: 1px solid #e2e2e2;
 }
