--- a/css/main.css
+++ b/css/main.css
@@ -28,12 +28,15 @@ img {
 }
 
 header {
+  display: flex;
+  align-items: center;
   text-align: center;
+  flex-direction: column;
   font-size: 1rem;
 }
 
 .headersub {
-    font-size: 1.125rem;
+  font-size: 1.125rem;
 }
 
 h1 {
@@ -46,10 +49,10 @@ ul {
   display: flex;
   justify-content: center;
   padding: 0;
-  margin: 0 0 1em 0;
+  margin: 0 0 1em;
 }
 
-li a{
+li a {
   font-size: 1.125rem;
   margin: 0 .5em;
   padding: 0;
@@ -58,8 +61,6 @@ li a{
 
 .one {
   text-align: center;
-  padding-top: 1em;
-  margin-bottom: 3.5em;
 }
 
 h2 {
@@ -67,10 +68,11 @@ h2 {
   padding: 0 .5em;
   font-weight: normal;
   margin-bottom: 0;
+  margin-top: .7em;
 }
 
 .p-one {
-  padding: .7em .7em;
+  padding: .7em;
   margin: 0;
 }
 
@@ -111,9 +113,8 @@ footer p {
   padding: 1.5em;
 }
 
-hr {
-  margin-top: -2em;
-  margin-bottom: 1.5em;
+.second {
+  margin: 1em 0 1.5em;
   border-width: 2px;
   border-top: 1px solid #e2e2e2;
 }
@@ -123,4 +124,130 @@ hr {
   margin-bottom: 0;
   border-width: 2px;
   border-top: 1px solid #e2e2e2;
+}
+
+.first {
+  margin-top: 1.5em;
+  margin-bottom: 0;
+  border-width: 2px;
+  border-top: 1px solid #e2e2e2;
+}
+
+@media only screen and (min-width: 38em) {
+
+  html {
+    font-size: 100%;
+    line-height: 1.3;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.3rem;
+  }
+
+  .two {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    margin-bottom: 1em;
+  }
+
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 1rem;
+    text-align: left;
+  }
+
+  .one {
+    margin: 0 3em;
+  }
+
+  .second {
+    margin: 0 0 2em;
+  }
+
+  h2 {
+    margin-bottom: .5em;
+  }
+
+  .p-one {
+    margin-bottom: 1.5em;
+  }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.5;
+  }
+
+  .all {
+    flex-grow: 1;
+    margin-bottom: 1em;
+  }
+
+  .line {
+    margin-top: 1em;
+  }
+
+  .footer {
+    margin-bottom: .5em;
+  }
+
+}
+
+@media only screen and (min-width: 60em) {
+
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
+
+  h1,
+  p {
+    margin: 0 0 1.5rem;
+  }
+
+  .one {
+    margin: 0 12em;
+  }
+
+  h2 {
+    font-size: 1.7em;
+    margin: .4em 0 0;
+  }
+
+  .p-one {
+    font-size: .9em;
+    margin-bottom: .5em;
+  }
+
+  h1 {
+    font-size: 1.7em;
+    margin-bottom: .5em;
+  }
+
+  .headersub {
+    font-size: .6em;
+  }
+
+  li a {
+    font-size: 1em;
+  }
+
+  .second {
+    margin-bottom: 1.5em;
+  }
+
+  .all {
+    font-size: .8em;
+  }
+
+  a {
+    font-size: .6em;
+  }
+
+  h3 {
+    font-size: 1.3em;
+  }
+
 }
